--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.4",
     "browser-sync": "^2.27.7",
+    "core-js": "^3.22.2",
     "del": "^6.0.0",
     "gh-pages": "^3.2.3",
     "gulp": "^4.0.2",
